# saber-tui

./: LICENSE  README.md  pyproject.toml
.github/workflows/: audit.yml  release.yml
docs/superpowers/plans/: 2026-04-30-faithful-python-tui-port.md  2026-05-02-editor-autocomplete-parity.md  2026-05-03-core-tui-render-parity.md
docs/superpowers/specs/: 2026-04-30-faithful-python-tui-port-design.md  2026-05-02-editor-autocomplete-parity-design.md  2026-05-03-core-tui-render-parity-design.md
examples/: chat.py  chat_simple.py  showcase.py
src/saber_tui/: __init__.py  autocomplete.py  editor_component.py  fuzzy.py  keybindings.py  keys.py  kill_ring.py  stdin_buffer.py  terminal.py  tui.py  undo_stack.py  utils.py
src/saber_tui/components/: __init__.py  box.py  cancellable_loader.py  editor.py  input.py  loader.py  select_list.py  settings_list.py  spacer.py  text.py  truncated_text.py
tests/: test_autocomplete.py  test_chat_example.py  test_editor.py  test_examples.py  test_fuzzy.py  test_imports.py  test_input.py  test_keybindings.py  test_keys.py  test_kill_ring.py  test_loader.py  test_select_list.py  test_settings_list.py  test_stdin_buffer.py  test_terminal.py  test_text_components.py  test_tui_overlay.py  test_tui_render.py  test_tui_tmux_smoke.py  test_undo_stack.py  test_utils.py  virtual_terminal.py
