[project]
name = "saber-tui"
version = "0.1.0"
description = "Faithful low-level Python port of pi-tui"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "regex",
    "wcwidth",
]

[dependency-groups]
dev = [
    "pyte",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saber_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
