[project]
name = "saber-tui"
version = "0.3.0"
description = "A simple TUI in Python, inspired by pi-tui"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "regex",
    "wcwidth",
]

[dependency-groups]
dev = [
    "pyte",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saber_tui"]

[tool.uv]
exclude-newer = "7 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
